# cpp-ai-copilot-stage5-Drogon

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
config/: app.env  product.json
docs/superpowers/plans/: 2026-06-15-drogon-product-skeleton.md
docs/superpowers/specs/: 2026-06-15-drogon-product-skeleton-design.md
include/copilot/: api_response.hpp  application.hpp  chat_service.hpp  config.hpp  error_code.hpp  http.hpp  logger.hpp  router.hpp  simple_server.hpp
include/copilot/product/: api_response.hpp  error_code.hpp
src/: api_response.cpp  application.cpp  chat_service.cpp  config.cpp  error_code.cpp  http.cpp  logger.cpp  main.cpp  main.md  router.cpp  simple_server.cpp
src/product/: api_response.cpp  drogon_response.hpp  error_code.cpp  health_controller.cpp  health_controller.hpp  main.cpp
tests/: test_api_response.cpp  test_core.cpp
